tests/NormalTests/paczka1/small_fuzzy/55429518.err
Error in line 2: nwfuP S760 0,9
Error in line 3: nwfuP A490 6,8
Error in line 11: HHPR6PJlArQ S691 71,3
Error in line 8: S236 S236 11,0
